<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:padding="5dp"
            android:id="@+id/tv1"
            android:text="@string/name_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv2"
            android:text="@string/number_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv3"
            android:text="@string/email_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv4"
            android:text="@string/organization_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv5"
            android:text="@string/address_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv6"
            android:text="@string/note_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv7"
            android:text="@string/im_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />
    </LinearLayout>
</android.support.v7.widget.CardView>